--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="file:///C:/Users/abc/Downloads/Pranav%20Anand%20(2).pdf">https://drive.google.com/file/d/1KdLEiv1Tq90eqbxmZPx2Hy9uaNt3OOox/view?usp=sharing</a></p>
+	            <p><a href="https://docs.google.com/document/d/17Ol3yGeB-HTAwoITEAClcZpxQWDwmHAX0_Qo3hXOf0k/edit?usp=sharing</a></p>
 	          </div>
           </div>
 
