--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://docs.google.com/document/d/17Ol3yGeB-HTAwoITEAClcZpxQWDwmHAX0_Qo3hXOf0k/edit?usp=sharing</a></p>
+	            <p><a href="https://https://docs.google.com/document/d/17Ol3yGeB-HTAwoITEAClcZpxQWDwmHAX0_Qo3hXOf0k/edit?usp=sharing</a></p>
 	          </div>
           </div>
 
@@ -577,7 +577,7 @@
 			<br>
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
-					<h2>Have a<span> Question?  </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
+					<h2>Have a<span> Question?  </span> <a href="https://docs.google.com/forms/d/e/1FAIpQLScbZnk-GuvAW59Z8Uc12Hqw3EvgMm6zWTv1p1awTQmW6nPWIw/viewform?usp=sf_link" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
 				</div>
 			</div>
 				<br>
