--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 			<br>
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
-					<h2>Have a<span> Question?  </span> <a href="https://docs.google.com/forms/d/e/1FAIpQLScbZnk-GuvAW59Z8Uc12Hqw3EvgMm6zWTv1p1awTQmW6nPWIw/viewform?usp=sf_link" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
+					<h2>Have a<span> Question?  </span> <a href="https://docs.google.com/forms/d/e/1FAIpQLScbZnk-GuvAW59Z8Uc12Hqw3EvgMm6zWTv1p1awTQmW6nPWIw/viewform" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
 				</div>
 			</div>
 				<br>
