--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 						<span class="date">Present</span>
 						<h2>Software developer intern</h2>
 						<span class="position">AIC OF INDIA LTD.</span>
-						<p class="mt-4">AIC is a central government unit of India for insurance.  
+						<p class="mt-4">It is a government-owned agricultural insurer under ownership of the Ministry of Finance.  
 							<ul>
 								<li>Developed an asset management system . Resulted in ~100% website growth and 30% increase in conversion rate YoY.</li>
 								<li>AMS involves analytical tools like SQL, Flask, Html, Css, js, Python.</li>
